Added tab text and icon.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FUCK YEAH, A PDF GENERATOR!</title>
+    <title>FUCK YEAH</title>
+    <link rel="icon" href="/burning-skull.jpg" />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
